iter_language/tests/corpus/invalid/clone-without-excludes.iter
workspace clone {
  base = "."
  preserve_mtime = true
  apply_back { mode = sync }}
